--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -84,6 +84,11 @@
                         </div>
                     </div>
 
+                    <div class="form-check mb-3">
+                        {{ form_widget(registrationForm.rememberMe, {'attr': {'class': 'form-check-input'}}) }}
+                        {{ form_label(registrationForm.rememberMe, 'Remember Me', {'label_attr': {'class': 'form-check-label'}}) }}
+                    </div>
+
                     <div class="form-check mb-4">
                         {{ form_widget(registrationForm.agreeTerms, {
                             'attr': {
@@ -104,7 +109,7 @@
                     {{ form_end(registrationForm) }}
 
                     <div class="mt-3 text-center">
-                        <p>Already have an account? <a href="#" class="text-primary">Sign in</a></p>
+                        <p>Already have an account? <a href="{{ path('app_login') }}" class="text-primary">Sign in</a></p>
                     </div>
                 </div>
             </div>
