--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -22,7 +22,7 @@
             </label>
         </div>
         <ul class="store-grid">
-            <li class="active"><i class="fa fa-th"></i></li>
+            <li class="active"><a href="/index"><i class="fa fa-th"></i></a></li>
             <li><a href="#"><i class="fa fa-th-list"></i></a></li>
         </ul>
     </div>
