--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -16,6 +16,8 @@
             <label>
                 Show:
                 <select class="input-select" id="products-per-page">
+                    <option value="2" {% if limit == 2 %}selected{% endif %}>2</option>
+
                     <option value="10" {% if limit == 10 %}selected{% endif %}>10</option>
                     <option value="20" {% if limit == 20 or limit is not defined %}selected{% endif %}>20</option>
                     <option value="50" {% if limit == 50 %}selected{% endif %}>50</option>
