--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -48,14 +48,13 @@
                 <div class="product-img">
                     <img src="{{ asset('styles/' ~ produit.getImage()) }}" alt="{{ produit.name }}" class="img-fluid">
                 <div class="product-label">
-                        <span class="sale">-{{ random(5,30) }}%</span>
                         <span class="new">NEW</span>
                     </div>
                 </div>
                 <div class="product-body">
                     <p class="product-category">{{ produit.categorie.getName() }}</p>
                     <h3 class="product-name"><a href="#">{{ produit.name }}</a></h3>
-                    <h4 class="product-price">$ {{ produit.price}} <del class="product-old-price">$990.00</del></h4>
+                    <h4 class="product-price">$ {{ produit.price}} <del class="product-old-price">${{ (produit.price*100/(100-random(5,30)))|number_format(2) }}</del></h4>
                     <div class="product-rating">
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
