--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -90,42 +90,17 @@
                 <div class="aside">
                     <h3 class="aside-title">Categories</h3>
                    <div class="checkbox-filter" id="category-filter">
+                       {% for category in categories %}
+                           <div class="input-checkbox">
+                               <input type="checkbox" id="category-{{loop.index }}" value="{{ category }}">
+                               <label for="category-{{loop.index }}">
+                                   <span></span>
+                                   {{ category }}
+                                   <small>(120)</small>
+                               </label>
+                           </div>
+                        {% endfor %}
 
-                       <div class="input-checkbox">
-                           <input type="checkbox" id="category-1" value="ordinateur">
-                           <label for="category-1">
-                               <span></span>
-                               Laptops
-                               <small>(120)</small>
-                           </label>
-                       </div>
-
-                       <div class="input-checkbox">
-                           <input type="checkbox" id="category-2" value="smartphones">
-                           <label for="category-2">
-                               <span></span>
-                               Smartphones
-                               <small>(740)</small>
-                           </label>
-                       </div>
-
-                       <div class="input-checkbox">
-                           <input type="checkbox" id="category-3" value="cameras">
-                           <label for="category-3">
-                               <span></span>
-                               Cameras
-                               <small>(1450)</small>
-                           </label>
-                       </div>
-
-                       <div class="input-checkbox">
-                           <input type="checkbox" id="category-4" value="accessories">
-                           <label for="category-4">
-                               <span></span>
-                               Accessories
-                               <small>(578)</small>
-                           </label>
-                       </div>
                    </div>
 
                 </div>
