--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -44,10 +44,10 @@
             <!-- NAV -->
             <ul class="main-nav nav navbar-nav">
                 <li class="active"><a href="/index">Home</a></li>
-                <li><a href="/index/laptops">Laptops</a></li>
-                <li><a href="/index/smartphone">Smartphones</a></li>
-                <li><a href="/index/camera">Cameras</a></li>
-                <li><a href="/index/accessoire">Accessories</a></li>
+                {% for category in categories %}
+                <li><a href="/index/{{ category }}">{{ category }}</a></li>
+
+                {% endfor %}
             </ul>
             <!-- /NAV -->
         </div>
@@ -111,12 +111,12 @@
                     <div class="price-filter">
                         <div id="price-slider" ></div>
                         <div class="input-number price-min">
-                            <label for="price-min"><input id="price-min" type="number" max="9999"></label>
+                            <label for="price-min"><input id="price-min" type="number" max="9999.0"></label>
 
                         </div>
                         <span>-</span>
                         <div class="input-number price-max" >
-                            <label for="price-max"><input id="price-max" type="number" max="9999"></label>
+                            <label for="price-max"><input id="price-max" type="number" max="9999.0"></label>
 
                         </div>
                     </div>
