--- a/templates/fragments/header.html.twig
+++ b/templates/fragments/header.html.twig
@@ -30,7 +30,7 @@
                 <div class="col-md-3">
                     <div class="header-logo">
                         <a href="/index" class="logo">
-                            <img src="{{ asset('styles/img/logo.png') }}" alt="">
+                            <img src="{{ asset('styles/img/logo.jpg') }}" alt="" style="width: 130px; height: auto;">
                         </a>
                     </div>
                 </div>
