--- a/templates/admin_view/products-list.html.twig
+++ b/templates/admin_view/products-list.html.twig
@@ -50,6 +50,8 @@
                         <a href="{{ url('app_create_produit', {id: produit.id}) }}" ><i class="fa fa-pencil-square-o"></i></a>
                         &nbsp;
                         <a href="{{ url('produit.delete', {id: produit.id}) }}" ><i class="fa fa-trash"></i></a>
+                        &nbsp;
+                        <a href="#" ><i class="fa fa-eye"></i></a>
                     </td>
                 </tr>
             {% endfor %}
